--- a/lab3/survey/src/main/webapp/index.xhtml
+++ b/lab3/survey/src/main/webapp/index.xhtml
@@ -5,6 +5,7 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
+    xmlns:c="http://java.sun.com/jstl/core"
 >
     <h:head>
         <style type="text/css">
@@ -19,6 +20,16 @@
         </style>
     </h:head>
     <h:body>
+        <div>
+            <h1>
+                <h:form>
+                    <c:set var="ad" scope="request" value="#{Survey.randomAd}" />
+
+                    <h:commandLink value="#{ad.text}" action="#{Survey.openAd(ad)}" />
+                </h:form>
+            </h1>
+        </div>
+
         <h:panelGroup layout="block" id="app">
             <h1>Survey</h1>
             <h:panelGroup layout="block" rendered="#{Survey.page == 1}">
