--- a/lab3/book-manager/src/main/webapp/index.xhtml
+++ b/lab3/book-manager/src/main/webapp/index.xhtml
@@ -5,55 +5,164 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core"
 >
-    <h:head />
+    <h:head>
+        <style type="text/css">
+            * {
+                font-family: Lato, Helvetica, sans-serif;
+            }
+            input:not([type="checkbox"]), select {
+                padding: .75rem 1rem;
+                border-radius: 5px;
+                font-size: 1rem;
+                border: 1px solid #F1F5F8;
+                color: #22292F;
+                -webkit-appearance: none;
+                background: #F1F5F8;
+            }
+            select {
+                padding-right: 2rem;
+                position: relative;
+                display: block;
+                width: 100%;
+            }
+            input[type="text"]:focus, select:focus {
+                background: #FFFFFF;
+                border-color: #B8C2CC;
+            }
+            select + div {
+                position: absolute;
+                width: 2rem;
+                height: 100%;
+                top: 0;
+                right: 0;
+                content: "";
+                pointer-events: none;
+                z-index: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #22292F;
+            }
+            select:not([multiple]) + div > img {
+                display: block;
+                width: 1.25rem;
+            }
+            select[multiple] + div {
+                display: none;
+            }
+            *:focus {
+                outline: none;
+                box-shadow: 0 0 0 3px rgba(52, 144, 220, 0.5);
+            }
+            #selectionTools {
+                display: flex;
+            }
+            .relative {
+                position: relative;
+            }
+            .flex {
+                display: flex;
+            }
+            .center-xy {
+                justify-content: center;
+                align-items: center;
+            }
+            #selectionTools {
+                justify-content: space-around;
+                margin: 1rem 0 4rem;
+            }
+            .ml-2 {
+                margin-left: .5rem;
+            }
+            table {
+                margin: 0 auto;
+                border: none;
+                border-collapse: collapse;
+            }
+            tr:nth-child(2) {
+                background: #f2f5f8;
+            }
+            thead {
+                background: #606F7B;
+                color: #fff;
+            }
+            td, th {
+                padding: 0.75rem 1.5rem;
+            }
+            input.calculateTotal {
+                background: #3490DC;
+                color: white;
+                border-radius: 5px;
+                margin: 2rem auto;
+            }
+            input.calculateTotal:hover {
+                background: #2779BD;
+                cursor: pointer;
+            }
+        </style>
+    </h:head>
     <h:body>
         <div id="app">
-            <h:form>
-                <h:selectOneMenu value="#{BookManager.currency}">
-                    <f:selectItem itemValue="PLN" itemLabel="PLN" />
-                    <f:selectItem itemValue="ORIGINAL" itemLabel="Original" />
+            <h:form id="selectionTools">
+                <div class="flex center-xy">
+                    Prices in currency:
+                    <div class="relative ml-2">
+                        <h:selectOneMenu value="#{BookManager.currency}">
+                            <f:selectItem itemValue="PLN" itemLabel="PLN" />
+                            <f:selectItem itemValue="ORIGINAL" itemLabel="Original" />
 
-                    <f:ajax event="change" render="booksTable" />
-                </h:selectOneMenu>
+                            <f:ajax event="change" render="booksTable" />
+                        </h:selectOneMenu>
+                        <div>
+                            <img src="chevron.svg" alt="" />
+                        </div>
+                    </div>
+                </div>
 
                 <h:outputLabel for="priceFrom">
                     Price From:
-                    <h:inputText value="#{BookManager.priceFrom}" id="priceFrom">
-                        <f:ajax event="blur" render="booksTable" />
+                    <h:inputText class="ml-2" value="#{BookManager.priceFrom}" id="priceFrom">
+                        <f:ajax event="blur" render="booksTable"/>
                     </h:inputText>
                 </h:outputLabel>
 
                 <h:outputLabel for="priceTo">
                     Price To:
-                    <h:inputText value="#{BookManager.priceTo}" id="priceTo">
+                    <h:inputText class="ml-2" value="#{BookManager.priceTo}" id="priceTo">
                         <f:ajax event="blur" render="booksTable" />
                     </h:inputText>
                 </h:outputLabel>
 
-                <h:selectOneMenu value="#{BookManager.filterCurrency}">
-                    <f:selectItem itemLabel="Select currency" />
-                    <f:selectItem itemValue="PLN" itemLabel="PLN" />
-                    <f:selectItem itemValue="EUR" itemLabel="EUR" />
-
-                    <f:ajax event="change" render="booksTable" />
-                </h:selectOneMenu>
-
-                <h:outputLabel for="displayedGenres">
-                    Displayed categories:
-                    <h:selectManyMenu id="displayedGenres" value="#{BookManager.displayedGenres}" style="height: 500px;">
-                        <f:selectItems value="#{BookManager.allGenres}" var="genre" itemLabel="#{genre}" />
+                <div class="relative">
+                    <h:selectOneMenu value="#{BookManager.filterCurrency}">
+                        <f:selectItem itemLabel="Select currency" />
+                        <f:selectItem itemValue="PLN" itemLabel="PLN" />
+                        <f:selectItem itemValue="EUR" itemLabel="EUR" />
 
                         <f:ajax event="change" render="booksTable" />
-                    </h:selectManyMenu>
+                    </h:selectOneMenu>
+                    <div>
+                        <img src="chevron.svg" alt="" />
+                    </div>
+                </div>
+
+                <h:outputLabel for="displayedGenres" class="flex center-xy">
+                    Displayed categories:
+                    <div class="ml-2">
+                        <h:selectManyMenu id="displayedGenres" value="#{BookManager.displayedGenres}">
+                            <f:selectItems value="#{BookManager.allGenres}" var="genre" itemLabel="#{genre}" />
+
+                            <f:ajax event="change" render="booksTable" />
+                        </h:selectManyMenu>
+                    </div>
                 </h:outputLabel>
             </h:form>
 
-            <h:form>
-                <h:dataTable id="booksTable" value="#{BookManager.books}" var="book">
+            <h:form id="booksTable">
+                <h:dataTable value="#{BookManager.books}" var="book">
                     <h:column>
                         <h:selectBooleanCheckbox value="#{BookManager.selectedBooks[book.id]}" />
                     </h:column>
-
                     <h:column>
                         <f:facet name="header">Title</f:facet>
                         <h:outputText value="#{book.title}" />
@@ -82,7 +191,7 @@
                     </h:column>
                 </h:dataTable>
 
-                <h:commandButton update="summary" value="Calculate Total" />
+                <h:commandButton class="calculateTotal" update="summary" value="Calculate Total" />
             </h:form>
 
             <h:panelGroup id="summary" layout="block">
