Form submission via ajax

--- a/lab3/book-manager/src/main/webapp/index.xhtml
+++ b/lab3/book-manager/src/main/webapp/index.xhtml
@@ -191,7 +191,9 @@
                     </h:column>
                 </h:dataTable>
 
-                <h:commandButton class="calculateTotal" update="summary" value="Calculate Total" />
+                <h:commandButton class="calculateTotal" update="summary" value="Calculate Total">
+                    <f:ajax event="click" render="summary" execute="@form" />
+                </h:commandButton>
             </h:form>
 
             <h:panelGroup id="summary" layout="block">
